<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.gdn.qa.ui.module</groupId>
    <artifactId>be-basestep</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <parent>
        <groupId>com.gdn.qa.automation.core</groupId>
        <artifactId>badak-core-parent</artifactId>
        <version>3.9.22</version>
        <relativePath/>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <encoding>UTF-8</encoding>
        <http.client.version>4.5.12</http.client.version>

        <!--SET NUMBER OF TEST THREAD-->
        <parallel.thread>2</parallel.thread>
        <parallel.fork>1</parallel.fork>

        <!--CHANGE THIS VALUE FOR DIFFERENT TESTING ENVIRONMENT-->
        <serenity.properties>serenity.properties</serenity.properties>

        <maven.failsafe.plugin>3.0.0-M5</maven.failsafe.plugin>
        <runner.name>CucumberRunner</runner.name>
        <spring.path>classpath:/application-DEV1.properties</spring.path>
    </properties>

    <dependencies>
        <!--Badak and Spring Dependencies. It's not recommended to put any dependencies above this-->
        <dependency>
            <groupId>com.gdn.qa.automation.core</groupId>
            <artifactId>badak-base-steps</artifactId>
        </dependency>
        <dependency>
            <groupId>com.gdn.qa.automation.core</groupId>
            <artifactId>badak-base-steps</artifactId>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.gdn.qa.automation.core</groupId>
            <artifactId>badak-utility</artifactId>
        </dependency>
        <dependency>
            <groupId>com.gdn.qa.automation.core</groupId>
            <artifactId>badak-core</artifactId>
        </dependency>

        <!--Your custom Dependency starts here-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.38</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.blibli.oss</groupId>
            <artifactId>common-plugin</artifactId>
            <version>2.0.1</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>ar-gks-prd-libs-snapshots-local</id>
            <name>ar-gks-prd-libs-snapshots-local</name>
            <url>
                artifactregistry://asia-southeast2-maven.pkg.dev/prj-gks-prd-sh-automate/ar-gks-prd-libs-snapshots-local
            </url>
        </repository>
        <repository>
            <id>ar-gks-prd-libs-releases-local</id>
            <name>ar-gks-prd-libs-releases-local</name>
            <url>
                artifactregistry://asia-southeast2-maven.pkg.dev/prj-gks-prd-sh-automate/ar-gks-prd-libs-releases-local
            </url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>ar-gks-prd-libs-snapshots-local</id>
            <name>ar-gks-prd-libs-snapshots-local</name>
            <url>
                artifactregistry://asia-southeast2-maven.pkg.dev/prj-gks-prd-sh-automate/ar-gks-prd-libs-snapshots-local
            </url>
        </pluginRepository>
        <pluginRepository>
            <id>ar-gks-prd-libs-releases-local</id>
            <name>ar-gks-prd-libs-releases-local</name>
            <url>
                artifactregistry://asia-southeast2-maven.pkg.dev/prj-gks-prd-sh-automate/ar-gks-prd-libs-releases-local
            </url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <extensions>
            <extension>
                <groupId>com.google.cloud.artifactregistry</groupId>
                <artifactId>artifactregistry-maven-wagon</artifactId>
                <version>2.2.1</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--Need to comment if want to release-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven.failsafe.plugin}</version>
                <executions>
                    <execution>
                        <id>integration-test</id>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <includes>
                        <include>**/${runner.name}.java</include>
                    </includes>
                    <systemPropertyVariables>
                        <cucumber.options>--junit,--step-notifications</cucumber.options>
                        <spring.config.location>${spring.path}</spring.config.location>
                        <properties>${serenity.properties}</properties>
                    </systemPropertyVariables>
                    <argLine>
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                        --add-opens=java.base/java.util=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.serenity-bdd.maven.plugins</groupId>
                <artifactId>serenity-maven-plugin</artifactId>
                <version>${serenity.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>net.serenity-bdd</groupId>
                        <artifactId>serenity-single-page-report</artifactId>
                        <version>${serenity.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <reports>single-page-html</reports>
                </configuration>
                <executions>
                    <execution>
                        <id>serenity-reports</id>
                        <phase>${serenity.execution.phase}</phase>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
